unpackaged/main/default/objects/Customer_Survey__c/Customer_Survey__c.object-meta.xml
<CustomObject>
    <label>Customer Survey</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Customer Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>