unpackaged/main/default/objects/Customer_Survey__c/fields/Email_Opt_In_Special_Events__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Special_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would you like information on special events?</inlineHelpText>
    <label>Email Opt-In Special Events</label>
    <type>Checkbox</type>
</CustomField>