unpackaged/main/default/objects/Customer_Survey__c/fields/Food_Rating__c.field-meta.xml
<CustomField>
    <fullName>Food_Rating__c</fullName>
    <inlineHelpText>Rate the food quality at Fred's Smokehouse

1 = Needs Work
5 = Damn Good</inlineHelpText>
    <label>Food Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>