unpackaged/main/default/objects/Customer_Survey__c/fields/Gift_Shop_Rating__c.field-meta.xml
<CustomField>
    <fullName>Gift_Shop_Rating__c</fullName>
    <inlineHelpText>Rate the selection of the gift shop merchandise

1 = Needs Work
5 = Damn Good</inlineHelpText>
    <label>Gift Shop Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>