unpackaged/main/default/objects/Customer_Survey__c/fields/Local_Tour_Date__c.field-meta.xml
<CustomField>
    <fullName>Local_Tour_Date__c</fullName>
    <inlineHelpText>Eastern Time Zone</inlineHelpText>
    <label>Local Tour Date</label>
    <type>Date</type>
</CustomField>