unpackaged/main/default/objects/Customer_Survey__c/fields/Local_Tour_Time__c.field-meta.xml
<CustomField>
    <fullName>Local_Tour_Time__c</fullName>
    <inlineHelpText>Eastern Time Zone</inlineHelpText>
    <label>Local Tour Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>