unpackaged/main/default/objects/Customer_Survey__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Based on Survey Location</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Stillhouse</fullName>
            </value>
            <value>
                <fullName>Urban Stillhouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>