unpackaged/main/default/objects/Customer_Survey__c/fields/Overall__c.field-meta.xml
<CustomField>
    <fullName>Overall__c</fullName>
    <formula>IMAGE( 
CASE(Overall_Rating__c, 
"1", "/img/samples/stars_100.gif",
"2", "/img/samples/stars_200.gif",
"3", "/img/samples/stars_300.gif", 
"4", "/img/samples/stars_400.gif", 
"5", "/img/samples/stars_500.gif", 
"/img/samples/stars_000.gif"), 
"Overall Rating")</formula>
    <inlineHelpText>Overall Rating</inlineHelpText>
    <label>Overall</label>
    <type>Text</type>
</CustomField>