unpackaged/main/default/objects/Customer_Survey__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <inlineHelpText>Overall my visit here left me feeling?

1 = Needs Work
5 = Damn Good</inlineHelpText>
    <label>Overall Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>