unpackaged/main/default/objects/Customer_Survey__c/fields/Tour__c.field-meta.xml
<CustomField>
    <fullName>Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did you take the tour?</inlineHelpText>
    <label>Tour</label>
    <type>Checkbox</type>
</CustomField>