unpackaged/main/default/objects/Customer_Survey__c/fields/Tour_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Tour_Date_Time__c</fullName>
    <inlineHelpText>Eastern Time Zone</inlineHelpText>
    <label>Tour Date Time</label>
    <type>DateTime</type>
</CustomField>