unpackaged/main/default/objects/Customer_Survey__c/fields/Tour_Guide__c.field-meta.xml
<CustomField>
    <fullName>Tour_Guide__c</fullName>
    <inlineHelpText>Who was your tour guide?</inlineHelpText>
    <label>Tour Guide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>