unpackaged/main/default/objects/Customer_Survey__c/fields/Tour_Guide_Rating__c.field-meta.xml
<CustomField>
    <fullName>Tour_Guide_Rating__c</fullName>
    <inlineHelpText>If yes, how was your tour guide?

1 = Needs Work
5 = Damn Good</inlineHelpText>
    <label>Tour Guide Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>