unpackaged/main/default/objects/Customer_Survey__c/fields/Tour_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tour_Lost_Reason__c</fullName>
    <inlineHelpText>If no, why not?</inlineHelpText>
    <label>Tour Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>Didn't fit my schedule</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>